# dtkdevice

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  test-coverage.sh  test-recoverage.sh
.reuse/: dep5
debian/: changelog  control  copyright  rules
docs/: CMakeLists.txt
docs/dtklsdevice/: index.en_US.md
dtkinputdevices/: CMakeLists.txt
dtkinputdevices/docs/: CMakeLists.txt  dinputdevice.zh_CN.dox  dinputdevicekeyboard.zh_CN.dox  dinputdevicemanager.zh_CN.dox  dinputdevicemouse.zh_CN.dox  dinputdevicepointer.zh_CN.dox  dinputdevicesetting.zh_CN.dox  dinputdevicetablet.zh_CN.dox  dinputdevicetouchpad.zh_CN.dox  dinputdevicetrackpoint.zh_CN.dox  dtkinputdevices_types.zh_CN.dox  index.en_US.md  index.zh_CN.md
dtkinputdevices/examples/: CMakeLists.txt  devicemonitor.cpp
dtkinputdevices/include/: dinputdevice.h  dinputdevicekeyboard.h  dinputdevicemanager.h  dinputdevicemouse.h  dinputdevicepointer.h  dinputdevicesetting.h  dinputdevicetablet.h  dinputdevicetouchpad.h  dinputdevicetrackpoint.h  dinputdevicetypes.h  dtkinputdevices_global.h  dtkinputdevices_types.h
dtkinputdevices/src/: CMakeLists.txt  dinputdevice.cpp  dinputdevice_p.h  dinputdevicekeyboard.cpp  dinputdevicekeyboard_p.h  dinputdevicemanager.cpp  dinputdevicemanager_p.h  dinputdevicemouse.cpp  dinputdevicemouse_p.h  dinputdevicepointer.cpp  dinputdevicepointer_p.h  dinputdevicesetting.cpp  dinputdevicesetting_p.h  dinputdevicetablet.cpp  dinputdevicetablet_p.h  dinputdevicetouchpad.cpp  dinputdevicetouchpad_p.h  dinputdevicetrackpoint.cpp  dinputdevicetrackpoint_p.h  dtkinputdevices_converters.cpp  dtkinputdevices_converters.h  dtkinputdevices_types.cpp
dtkinputdevices/src/dbus/: inputdevicesinterface.cpp  inputdevicesinterface.h  keyboardinterface.cpp  keyboardinterface.h  mouseinterface.cpp  mouseinterface.h  touchpadinterface.cpp  touchpadinterface.h  trackpointinterface.cpp  trackpointinterface.h  wacominterface.cpp  wacominterface.h
dtkinputdevices/tests/: CMakeLists.txt  main.cpp  ut_dinputdevice.cpp  ut_dinputdevicekeyboard.cpp  ut_dinputdevicemanager.cpp  ut_dinputdevicemouse.cpp  ut_dinputdevicepointer.cpp  ut_dinputdevicesetting.cpp  ut_dinputdevicetablet.cpp  ut_dinputdevicetouchpad.cpp  ut_dinputdevicetrackpoint.cpp
dtkinputdevices/tests/fakedbus/: inputdevicesservice.cpp  inputdevicesservice.h  keyboardservice.cpp  keyboardservice.h  mouseadaptor.cpp  mouseadaptor.h  mouseservice.cpp  mouseservice.h  touchpadservice.cpp  touchpadservice.h  trackpointadaptor.cpp  trackpointadaptor.h  trackpointservice.cpp  trackpointservice.h  wacomservice.cpp  wacomservice.h
dtklsdevice/: CMakeLists.txt  README.md  README.zh_CN.md
dtklsdevice/docs/: CMakeLists.txt  dcpudevice.zh_CN.dox  ddiskdevice.zh_CN.dox  dinputdevice.zh_CN.dox  dlsdevice.zh_CN.dox  dlsdevicetypes.zh_CN.dox  dmemorydevice.zh_CN.dox  dmotherboarddevice.zh_CN.dox  dnetdevice.zh_CN.dox  dprocessdevice.zh_CN.dox  index.en_US.md  index.zh_CN.md
dtklsdevice/docs/dtklsdevice/: dcpudevice.zh_CN.dox  ddiskdevice.zh_CN.dox  dinputdevice.zh_CN.dox  dlsdevice.zh_CN.dox  dlsdevicetypes.zh_CN.dox  dmemorydevice.zh_CN.dox  dmotherboarddevice.zh_CN.dox  dnetdevice.zh_CN.dox  dprocessdevice.zh_CN.dox
dtklsdevice/example/: CMakeLists.txt  demo_lsdevice.cpp  lshw.cpp
dtklsdevice/include/: dcpudevice.h  ddiskdevice.h  dinputdevice.h  dlsdevice.h  dlsdevicetypes.h  dmemorydevice.h  dmotherboarddevice.h  dnetdevice.h  dprocessdevice.h  dtklsdevice_global.h
dtklsdevice/src/: CMakeLists.txt  dcpudevice.cpp  ddiskdevice.cpp  dinputdevice.cpp  dlsdevice.cpp  dlsdevice_p.cpp  dlsdevice_p.h  dmemorydevice.cpp  dmotherboarddevice.cpp  dnetdevice.cpp  dprint.cpp  dprint.h  dprocessdevice.cpp
dtklsdevice/tests/: CMakeLists.txt  ut-demo.cpp
examples/: CMakeLists.txt
examples/inputdevices/: devicemonitor.cpp
include/: demo.h  namespace.h
include/global/: dtkdevice_global.h
include/inputdevices/: dinputdevicegeneric.h  dinputdevicekeyboard.h  dinputdevicemanager.h  dinputdevicemouse.h  dinputdevicepointer.h  dinputdevicesetting.h  dinputdevicetablet.h  dinputdevicetouchpad.h  dinputdevicetrackpoint.h  dtkinputdevices_global.h  dtkinputdevices_types.h
include/lsdevice/: dlsdevice.h  dprocessdevice.h
misc/: DtkDeviceConfig.cmake.in  dtkdevice.pc.in  qt_lib_dtkdevice.pri.in
src/: CMakeLists.txt  demo.cpp
src/inputdevices/: CMakeLists.txt  dinputdevicegeneric.cpp  dinputdevicegeneric_p.h  dinputdevicekeyboard.cpp  dinputdevicekeyboard_p.h  dinputdevicemanager.cpp  dinputdevicemanager_p.h  dinputdevicemouse.cpp  dinputdevicemouse_p.h  dinputdevicepointer.cpp  dinputdevicepointer_p.h  dinputdevicesetting.cpp  dinputdevicesetting_p.h  dinputdevicetablet.cpp  dinputdevicetablet_p.h  dinputdevicetouchpad.cpp  dinputdevicetouchpad_p.h  dinputdevicetrackpoint.cpp  dinputdevicetrackpoint_p.h  dtkinputdevices_types.cpp
src/inputdevices/dbus/: inputdevicesinterface.h  keyboardinterface.h  mouseinterface.h  touchpadinterface.h  trackpointinterface.h  wacominterface.h
src/lsdevice/: dcpudevice.cpp  ddiskdevice.cpp  dinputdevice.cpp  dlsdevice_p.cpp  dmemorydevice.cpp  dmotherboarddevice.cpp  dnetdevice.cpp  dprocessdevice.cpp  lsdevice.cmake
tests/: CMakeLists.txt
tests/inputdevices/: ut_dinputdevicegeneric.cpp  ut_dinputdevicemanager.cpp
